fix flex Collapse

--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   flex-wrap: wrap;
   position: relative;
+  width: 100%;
+  margin: 0px;
 }
 
 
@@ -11,7 +13,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 70%;
+  width: 100%;
   height: 80px;
   background-color: rgba(255, 96, 96, 1);
   border: none;
@@ -42,7 +44,7 @@ button {
   padding-top: 2rem;
   font-size: x-large;
   display: flex;
-  width: 70%;
+  width: 100%;
   background-color: rgba(246, 246, 246, 1);
   overflow: hidden;
   color: rgba(255, 96, 96, 1);
@@ -55,7 +57,7 @@ button {
 }
 
 // .slide-in {
-  // animation-delay: 0.2s;
+// animation-delay: 0.2s;
 // }
 
 .slide-out {
@@ -95,3 +97,13 @@ button {
     opacity: 0;
   }
 }
+
+
+
+// padding: 1rem; padding-top: 2rem; 
+// font-size: x-large; display: flex; width: 100%; 
+// background-color: rgb(246, 246, 246); 
+// overflow: hidden; color: rgb(255, 96, 96);
+// animation: slideInAnimation 0.5s forwards; 
+// z-index: -1; margin-top: -2rem; }
+
