--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -40,8 +40,7 @@ nav {
 @media (max-width: 480px) {
   nav {
     font-size: medium;
-    padding-left: 10px;
-    padding-right: 10px;
+
 
     .logo-link {
       display: flex;
