--- a/kasa/src/pages/APropos/APropos.scss
+++ b/kasa/src/pages/APropos/APropos.scss
@@ -19,3 +19,8 @@
   flex-direction: column;
   align-items: center;
 }
+
+#collapsWrapper {
+  width: 80%;
+margin: auto;
+}
