--- a/kasa/src/pages/Location/Location.scss
+++ b/kasa/src/pages/Location/Location.scss
@@ -100,10 +100,10 @@ $primary-rgb: 255 96 96;
   margin-top: 3rem;
   display: flex;
   justify-content: space-between;
+ }
 
-  button {
-    width: 610px;
-  }
+.classCollaps{
+width: 40%;
 }
 
 @media (max-width: 480px) {
